Fix white space rendering on right of screen in mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ html {
     scroll-padding-top: 2.5rem;
     font-size: 70%;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
